fix: replace deprecated Locale constructor with Locale.of()